# sec_llm_project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
config/: anthropic.json  default.json  default.yaml  local.yaml  offline.json  offline.yaml
docs/: COMMANDS.md  FUTURE_WORK.md  HUMAN_EVAL.md  LOCAL_SETUP.md
eval/: financebench_2023.json  finder_semantic.json
src/sec_llm_project/download/: constants.py  core.py
src/sec_llm_project/sec_intel/: __init__.py  pipeline.py
src/sec_llm_project/sec_intel/app/: __init__.py  cli.py
src/sec_llm_project/sec_intel/chunking/: __init__.py  sec_sections.py
src/sec_llm_project/sec_intel/comparison/: __init__.py  differ.py
src/sec_llm_project/sec_intel/core/: __init__.py  audit.py  config.py  types.py
src/sec_llm_project/sec_intel/embeddings/: __init__.py  base.py  factory.py  hashing.py  huggingface.py  openai_embed.py
src/sec_llm_project/sec_intel/evaluation/: __init__.py  dataset.py  enforcement.py  metrics.py  runner.py  snapshot.py
src/sec_llm_project/sec_intel/extraction/: __init__.py  extractor.py  schemas.py
src/sec_llm_project/sec_intel/generation/: __init__.py  grounded.py  numeric.py  prompts.py  verifier.py
src/sec_llm_project/sec_intel/index/: __init__.py  builder.py  finalize.py  store.py
src/sec_llm_project/sec_intel/ingest/: __init__.py  rate_limit.py  sec_download.py  sp500.py
src/sec_llm_project/sec_intel/llm/: __init__.py  base.py  factory.py  mock.py  providers.py
src/sec_llm_project/sec_intel/monitor/: __init__.py  monitor.py  signals.py
src/sec_llm_project/sec_intel/retrieval/: __init__.py  bm25.py  fusion.py  hybrid.py  rerank.py
src/sec_llm_project/utils/: env_config.py  logging_config.py
tests/: conftest.py  test_chunking.py  test_comparison_metrics.py  test_config.py  test_enforcement.py  test_eval_faithfulness.py  test_generation_extraction.py  test_index.py  test_ingest.py  test_monitor.py  test_retrieval.py  test_sidecar.py  test_verification.py
tests/eval/: baseline.json
tools/: download_gguf.py  dump_eval_outputs.py  fast_index.py  finalize_index.py  tune_weights.py
